--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,39 +4,74 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+aiohttp = "==3.9.3"
+aiosignal = "==1.3.1"
 asgiref = "==3.8.1"
+async-timeout = "==4.0.3"
+attrs = "==23.2.0"
+bitarray = "==2.9.2"
 certifi = "==2024.2.2"
 charset-normalizer = "==3.3.2"
+ckzg = "==1.0.0"
+cytoolz = "==0.12.3"
 debtcollector = "==3.0.0"
 django = "==5.0.4"
+django-cors-headers = "==4.3.1"
 dnspython = "==2.6.1"
+eth-account = "==0.11.2"
+eth-hash = "==0.7.0"
+eth-keyfile = "==0.8.0"
+eth-keys = "==0.5.0"
+eth-rlp = "==1.0.1"
+eth-typing = "==4.1.0"
+eth-utils = "==4.1.0"
+eth-abi = "==5.1.0"
 eventlet = "==0.36.1"
 ez-setup = "==0.9"
+frozenlist = "==1.4.1"
 greenlet = "==3.0.3"
+hexbytes = "==0.3.1"
 idna = "==3.6"
+jsonschema = "==4.21.1"
+jsonschema-specifications = "==2023.12.1"
+lru-dict = "==1.2.0"
+mininet = "==2.3.0.dev6"
 msgpack = "==1.0.8"
+multidict = "==6.0.5"
 netaddr = "==1.2.1"
 "oslo.config" = "==9.4.0"
 "oslo.i18n" = "==6.3.0"
 ovs = "==3.1.2"
+parsimonious = "==0.10.0"
 pbr = "==6.0.0"
+protobuf = "==5.26.1"
+pycryptodome = "==3.20.0"
+pyunormalize = "==15.1.0"
 pyyaml = "==6.0.1"
+referencing = "==0.34.0"
+regex = "==2023.12.25"
 "repoze.lru" = "==0.7"
 requests = "==2.31.0"
 rfc3986 = "==2.0.0"
+rlp = "==4.0.0"
 routes = "==2.5.1"
+rpds-py = "==0.18.0"
 ryu = "==4.34"
 six = "==1.16.0"
 sortedcontainers = "==2.4.0"
 sqlparse = "==0.4.4"
 stevedore = "==5.2.0"
 tinyrpc = "==1.1.7"
+toolz = "==0.12.1"
 typing-extensions = "==4.11.0"
 urllib3 = "==2.2.1"
+web3 = "==6.16.0"
 webob = "==1.8.7"
+websockets = "==12.0"
 wrapt = "==1.16.0"
+yarl = "==1.9.4"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
